kubernetes/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-broker
  template:
    metadata:
      labels:
        app: paperless-broker
    spec:
      containers:
        - image: redis:6.0
          name: paperless-broker
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
