kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-db
    spec:
      containers:
        - name: paperless-db
          image: postgres:13
          resources: {}
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
