kubernetes/ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ocr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ocr
  template:
    metadata:
      labels:
        app: paperless-ocr
    spec:
      containers:
        - name: gotenberg
          image: thecodingmachine/gotenberg
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          ports:
            - containerPort: 3000
        - name: tika
          image: apache/tika:1.28.1-full
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          ports:
            - containerPort: 9998
      restartPolicy: Always
