kubernetes/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-broker
spec:
  selector:
    app: paperless-broker
  ports:
    - name: paperless-broker
      port: 6379
      targetPort: 6379
