kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-db
spec:
  ports:
    - name: paperless-db
      port: 5432
      targetPort: 5432
  selector:
    app: paperless-db
