kubernetes/ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ocr
spec:
  selector:
    name: paperless-ocr
  ports:
    - name: gotenberg
      port: 3000
      targetPort: 3000
    - name: tika
      port: 9998
      targetPort: 9998
