kubernetes/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-app
spec:
  type: NodePort
  ports:
    - name: paperless-app
      port: 8000
      targetPort: 8000
  selector:
    app: paperless-app
