kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# Name the Ingress resource
  name: paperless-ingress
  annotations:
    # Add Cert-Manager SSL certificates as the name of the ClusterIssuer resource
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName: paperless-ingress-cert
      hosts:
        # Replace with your domain name
        - docs.waldecker.dev
  # Create Ingress routing rules
  rules:
  # Replace with your domain name
  - host: docs.waldecker.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           # Name of your service resource
            name: paperless-app
            port:
             # Port number to forward traffic to
              number: 8000
